2001-03-09  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* configure.in: Added header checks for crypt.h, sys/resource.h
	and sys/file.h, function checks for chroot, flock, getlogin,
	cuserid, getpriority, setpriority, getpass, sethostname,
	gethostname, and for crypt() in libcrypt.

2001-03-09  Neil Jerram  <neil@ossau.uklinux.net>

	* configure.in (htmldoc): Merge handling of `--enable-htmldoc'
	option from guile-doc/configure.in.

2001-03-06  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* libguile.h: Removed #include "libguile/dump.h".

2001-02-02  Keisuke Nishida  <kxn30@po.cwru.edu>

	* libguile.h: Added #include "libguile/dump.h".

2001-01-29  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* libguile.h: Added #include "libguile/rdelim.h".

2001-01-26  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	The following patch was sent by Thien-Thi Nguyen.

	* check-guile.in:  New file.

	* Makefile.am:  Add TESTS rule.

	* configure.in:  Add support for "make check".

2000-11-21  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* acconfig.h:  Removed bogus #ifndef.  Thanks to Lars J. Aas.

2000-10-25  Mikael Djurfeldt  <mdj@linnaeus.mit.edu>

	* GUILE-VERSION (LIBGUILE_MAJOR_VERSION): Incremented major
	version number to 10 due to the merge of GOOPS.

	* oop: New directory.

2000-09-20  Keisuke Nishida  <kxn30@po.cwru.edu>

	* libguile.h: #include "libguile/properties.h".

2000-09-17  Gary Houston  <ghouston@arglist.com>

	* configure.in, acconfig.h: remove the GCSE test: it doesn't seem
	to be reliable on all platforms.

2000-08-18  Gary Houston  <ghouston@arglist.com>

	* acconfig.h: added BROKEN_GCSE.
	* configure.in: check for a gcc GCSE optimisation bug.

2000-07-31  Gary Houston  <ghouston@arglist.com>

	* acconfig.h: added HAVE_H_ERRNO
	* configure.in: removed some dnl'd & obsolete cygwin stuff.
	added a test for h_errno.

2000-06-21  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* Guile 1.4 released.

2000-06-20  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>
